# congregate

./: .codeclimate.yml  .coveragerc  .gitignore  .gitkeep  .gitlab-ci.yml  .pylintrc  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  Pipfile  README.html  README.md  Runbook.md  STRUCTURE.md  aws.py  bitbucket-migration-features-matrix.md  build-tar.sh  config.sh  congregate  congregate.conf.template  congregate.py  congregate.py.bak  congregate.sh  do_all.sh  generate_test.csv  github-migration-features-matrix.md  group_cleanup.sh  groups.py  import_from_s3.py  jenkinsjob.py  list_projects.sh  logo.psd  migrate_projects.sh  migration-features-matrix.md  migration-features.md  mkdocs.yml  package-lock.json  package.json  (+21 more)
.gitlab/issue_templates/: congregate-support.md
aws/: import_from_s3.py  presigned.py
azure_scripts/: README_AZURE_VM.md  delete_azure_vm.ps1  restore_azure_vm.sh
ci/: build_test_image.sh  docscript.py  pylint-errors.sh  pylint.sh  spin_up_test_vm.sh  vault.yml
cli/: config.py  config_test.py  do_all.py  list_projects.py  stage_projects.py
congregate/: __init__.py  aws.py  congregate.py  correct_null_users.py  main.py  update-readme.py
congregate/cli/: config.py  config_old.py.bak  config_test.py  do_all.py  ldap_group_sync.py  list_projects.py  list_source.py  stage_base.py  stage_groups.py  stage_projects.py  stage_users.py  stage_wave.py  stage_wave_csv_generator.py  test_config.py  test_stage_projects.py
customer/: MAKE A COPY - TEMPLATE of Pre_Post-Migration.md  ado-migration-features-matrix.md  bitbucket-cloud-migration-doc.md  bitbucket-migration-features-matrix.md  codecommit-migration-features-matrix.md  customer-migration-change-management.md  definition-of-done.html  definition-of-done.md  famq.md  github-migration-features-matrix.md  gitlab-github-bitbucket-terminology-guide.md  gitlab-migration-features-matrix.md  gitlab_dot_com_backup.md  group-project-and-user-conflict-resolution.html  group-project-and-user-conflict-resolution.md  jenkins.md  migration-methods.md  migration-readiness-checklist.md  migration-wave-considerations.html  migration-wave-considerations.md  migration_vms_and_networking.md  post-migration-jenkins-to-gitlab-ci-duo-workflow.md  pre-and-post-migration.md  setting-up-codecommit-credentials.md
docker/: loki-config.yaml  vector.yaml
docker/maven/: Dockerfile  README.md  cmd_pb2.py  cmd_pb2_grpc.py  command_server.py  maven_pb2.py  maven_pb2_grpc.py  maven_server.py  pom.xml  pyproject.toml  settings.xml
docker/maven/docker/: Dockerfile
docker/maven/protos/: cmd.proto
docs/: airgapped-migration-usage.md  alternate-migration-methods.md  api.md  bitbucket-migration-features-matrix.md  code-quality.md  codecommit-migration-features-matrix.md  contributing.md  customer  customer-migration-change-management.md  definition-of-done.md  direct-transfer-api.md  direct-transfer-migrations.md  direct-transfer-usage.md  famq.md  full_setup.md  gen_ref_nav.py  github-development-setup.md  github-migration-features-matrix.md  gitlab-migration-features-matrix.md  group-project-and-user-conflict-resolution.md  index.md  jenkins.md  ldap-group-sync.md  migration-methods.md  migration-metrics.md  migration-readiness-checklist.md  migration-wave-considerations.md  pre-and-post-migration.md  roadmap.md  setting-up-airgap-migrations.md  setting-up-direct-transfer-migrations.md  setup-dev-env.md  troubleshooting.md  troubleshooting_s3_import.md  using-congregate.md  workflow.md  writing-tests.md
frontend/: .env  .env.development  index.html  package-lock.json  package.json  vite.config.js
helpers/: api.py  conf.py  logger.py  misc_utils.py
migration/: groups.py  projects.py  users.py
nginx_proxy/: README.md  congregate.example.net.conf
other/: api.py  cli.py
protos/: README.md  compile.sh  maven.proto
public/: index.html
runbooks/: README.md  airgapped-migration-usage.md  direct-transfer-migrations.md  direct-transfer-usage.md  discovery.md  group-and-project-migration-to-dot-com.md  group-and-project-migration-to-self-managed.md  group-and-project-migration.html  group-and-project-migration.md  migration-pre-and-post-requisites.md  migration-prerequisites.md  migrations-from-ado.md  migrations-from-bb-server.md  migrations-from-github.md  migrations-to-dot-com.md  migrations-to-self-managed.md  setting-up-airgap-migrations.md  setting-up-direct-transfer-migrations.md
templates/: stage-wave-template.csv  waves.csv
ui/: __init__.py  models.py  views.py
(+555 files in other folders)
