[tool.poetry]
name = "grpc-testing"
version = "0.1.0"
description = ""
authors = ["Michael Leopard <mleopard@gitlab.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.46.3"
grpcio-tools = "^1.46.3"
podman-compose = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
